--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hyperspace</title>
+  <title>Hyperfantasy</title>
   <meta name="robots" content="index, follow">
   <meta name="og:title" property="og:title" content="Hyperspace Design Studio">
   <meta name="description" content="Hyperspace Design Studio">
