--- a/public/index.html
+++ b/public/index.html
@@ -4,30 +4,30 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hyperspace</title>
+  <title>Hyperfantasy</title>
   <meta name="robots" content="index, follow">
-  <meta name="og:title" property="og:title" content="Hyperspace Design Studio">
-  <meta name="description" content="Hyperspace Design Studio">
+  <meta name="og:title" property="og:title" content="Hyperfantasy Design Studio">
+  <meta name="description" content="Hyperfantasy Design Studio">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
   <!-- update the version number as needed -->
-  <script defer="" src="/__/firebase/8.2.4/firebase-app.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
-  <script defer="" src="/__/firebase/8.2.4/firebase-auth.js"></script>
-  <script defer="" src="/__/firebase/8.2.4/firebase-database.js"></script>
-  <script defer="" src="/__/firebase/8.2.4/firebase-firestore.js"></script>
-  <script defer="" src="/__/firebase/8.2.4/firebase-functions.js"></script>
-  <script defer="" src="/__/firebase/8.2.4/firebase-messaging.js"></script>
-  <script defer="" src="/__/firebase/8.2.4/firebase-storage.js"></script>
-  <script defer="" src="/__/firebase/8.2.4/firebase-analytics.js"></script>
-  <script defer="" src="/__/firebase/8.2.4/firebase-remote-config.js"></script>
-  <script defer="" src="/__/firebase/8.2.4/firebase-performance.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-auth.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-database.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-firestore.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-functions.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-storage.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-analytics.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-remote-config.js"></script>
+  <script defer src="/__/firebase/8.6.3/firebase-performance.js"></script>
   <!-- 
     initialize the SDK after all desired features are loaded, set useEmulator to false
     to avoid connecting the SDK to running emulators.
   -->
-  <script defer="" src="/__/firebase/init.js?useEmulator=true"></script>
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
