--- a/public/about.html
+++ b/public/about.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About - Hyperspace</title>
+  <title>About - HyperFantasy</title>
   <meta name="robots" content="index, follow">
-  <meta name="og:title" property="og:title" content="Hyperspace Design Studio">
-  <meta name="description" content="Hyperspace Design Studio">
+  <meta name="og:title" property="og:title" content="HyperFantasy Design Studio">
+  <meta name="description" content="HyperFantasy Design Studio">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
@@ -471,7 +471,7 @@
     <nav class="topnav" id="myTopnav">
       <div class="left">
         <a href="./index.html" id="logo-site" class="active">
-          <img src="./hyperspace-black.png" alt="Image Content - Logo -  Hyperspace">
+          <img src="./HyperFantasy-black.png" alt="Image Content - Logo -  HyperFantasy">
         </a>
       </div>
       <div class="right">
@@ -486,8 +486,8 @@
 
   <div class="container">
     <section id="opening">
-      <h1>About Hyperspace</h1>
-      <p>Hyperspace is the best design studio around the world.
+      <h1>About HyperFantasy</h1>
+      <p>HyperFantasy is the best design studio around the world.
       </p>
     </section>
     <section id="group">
@@ -497,7 +497,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp1.jpg" alt="Image Content - Logo - hyperspace" />
+              <img src="./pp1.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Adin</span>
             <span class="team-position">UI/UX Designer</span>
@@ -506,7 +506,7 @@
           <div class="team-card">
 
             <div class="team-photo">
-              <img src="./pp2.jpg" alt="Image Content - Logo - hyperspace" />
+              <img src="./pp2.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Suaidi</span>
             <span class="team-position">Software Developer</span>
@@ -514,7 +514,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp3.jpg" alt="Image Content - Logo - hyperspace" />
+              <img src="./pp3.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Kong</span>
             <span class="team-position">Illustrator</span>
@@ -522,7 +522,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp4.jpg" alt="Image Content - Logo - hyperspace" />
+              <img src="./pp4.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Ayu</span>
             <span class="team-position">Graphic Designer</span>
@@ -530,7 +530,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp5.jpg" alt="Image Content - Logo - hyperspace" />
+              <img src="./pp5.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Rofi</span>
             <span class="team-position">Graphic Designer</span>
@@ -538,7 +538,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp6.jpg" alt="Image Content - Logo - hyperspace" />
+              <img src="./pp6.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Ali</span>
             <span class="team-position">Font Designer</span>
@@ -554,7 +554,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp-c-1.jpg" alt="Image Content - Logo - hyperspace" />
+              <img src="./pp-c-1.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Anna</span>
             <span class="team-position">Creative Business Consultant</span>
@@ -572,11 +572,11 @@
   </div>
 
   <footer id="footer">
-    <p>© 2021 Hyperspace. All rights reserved.</p>
+    <p>© 2021 HyperFantasy. All rights reserved.</p>
     <div class="social-media">
       <a href="https://www.instagram.com/mitayani.creative/"><span class="fa fa-instagram"></span></a>
       <a href="https://dribbble.com/lakoni"><span class="fa fa-dribbble"></span></a>
-      <a href="https://hyperspacecreative.web.app/"><span class="fa fa-snowflake-o"></span></a>
+      <a href="https://HyperFantasycreative.web.app/"><span class="fa fa-snowflake-o"></span></a>
     </div>
   </footer>
 
