--- a/public/contact.html
+++ b/public/contact.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact - Hyperspace</title>
+  <title>Contact - HyperFantasy</title>
   <meta name="robots" content="index, follow">
-  <meta name="og:title" property="og:title" content="Hyperspace Design Studio">
-  <meta name="description" content="Hyperspace Design Studio">
+  <meta name="og:title" property="og:title" content="HyperFantasy Design Studio">
+  <meta name="description" content="HyperFantasy Design Studio">
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
@@ -478,7 +478,7 @@
     <nav class="topnav" id="myTopnav">
       <div class="left">
         <a href="./index.html" id="logo-site" class="active">
-          <img src="./hyperspace-black.png" alt="Image Content - Logo -  Hyperspace">
+          <img src="./HyperFantasy-black.png" alt="Image Content - Logo -  HyperFantasy">
         </a>
       </div>
       <div class="right">
@@ -515,8 +515,8 @@
             <textarea name="description" class="form-control" rows="4" cols="60" required></textarea>
           </div>
           <input type="hidden" name="project_type" value="General Services" />
-          <input type="hidden" name="team" value="Hyperspace" />
-          <input type="hidden" name="come_from" value="https://hyperspacecreative.web.app/" />
+          <input type="hidden" name="team" value="HyperFantasy" />
+          <input type="hidden" name="come_from" value="https://HyperFantasycreative.web.app/" />
           <!-- <input type="text" name="_gotcha" style="display:none" /> -->
           <button name="submit" type="submit" id="sendMessage">Send</button>
         </div>
@@ -532,11 +532,11 @@
   </div>
 
   <footer id="footer">
-    <p>© 2021 Hyperspace. All rights reserved.</p>
+    <p>© 2021 HyperFantasy. All rights reserved.</p>
     <div class="social-media">
       <a href="https://www.instagram.com/mitayani.creative/"><span class="fa fa-instagram"></span></a>
       <a href="https://dribbble.com/lakoni"><span class="fa fa-dribbble"></span></a>
-      <a href="https://hyperspacecreative.web.app/"><span class="fa fa-snowflake-o"></span></a>
+      <a href="https://HyperFantasycreative.web.app/"><span class="fa fa-snowflake-o"></span></a>
     </div>
   </footer>
 
