--- a/public/index.html
+++ b/public/index.html
@@ -432,7 +432,7 @@
     <nav class="topnav" id="myTopnav">
       <div class="left">
         <a href="#" id="logo-site" class="active">
-          <img src="./hyperspace-black.png" alt="Image Content - Logo -  Hyperspace">
+          <img src="./HyperFantasy-black.png" alt="Image Content - Logo -  HyperFantasy">
         </a>
       </div>
       <div class="right">
@@ -448,7 +448,7 @@
   <div class="container">
     <section id="opening">
       <h1>We are HyperFantasy creative team</h1>
-      <p>Hyperspace is the best design studio around the world.
+      <p>HyperFantasy is the best design studio around the world.
       </p>
     </section>
     <section id="portfolio">
@@ -456,7 +456,7 @@
         <a href="#">
           <img
           src="https://cdn.dribbble.com/users/1863357/screenshots/12892477/media/6ce4d0588cff057e97fe753479c419b9.png?compress=1&resize=1200x900"
-            alt="Loan - hyperspace">
+            alt="Loan - HyperFantasy">
         </a>
         <a href="#">
           <img
@@ -471,12 +471,12 @@
         <a href="#">
           <img
           src="https://cdn.dribbble.com/users/1863357/screenshots/14435699/media/d473237887c6d99b8f54fd93cf202a2c.jpg?compress=1&resize=1200x900"
-            alt="Food - hyperspace">
+            alt="Food - HyperFantasy">
         </a>
         <a href="#">
           <img
           src="https://cdn.dribbble.com/users/1863357/screenshots/12891993/media/eb5de81653197d0fecee0cfa879f7cca.png?compress=1&resize=1200x900"
-            alt="Date - hyperspace">
+            alt="Date - HyperFantasy">
         </a>
         <a href="#">
           <img
@@ -490,22 +490,22 @@
         <h2>PARTNERS</h2>
         <div class="flex">
           <a href="./mitayani/index.html">
-            <img src="./logo-mitayani-black.png" alt="Image Content - Logo -  hyperspace">
+            <img src="./logo-mitayani-black.png" alt="Image Content - Logo -  HyperFantasy">
           </a>
           <a href="./lakoni/index.html">
-            <img src="./lakoni.png" style="width: 58%;" alt="Image Content - Logo -  hyperspace">
+            <img src="./lakoni.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
           </a>
           <a href="./aksarasa/index.html">
-            <img src="./aksarasa.png" alt="Image Content - Logo -  hyperspace">
+            <img src="./aksarasa.png" alt="Image Content - Logo -  HyperFantasy">
           </a>
           <a href="https://zopavo.web.app/">
-            <img src="./zopavo-center.png" alt="Image Content - Logo -  hyperspace">
+            <img src="./zopavo-center.png" alt="Image Content - Logo -  HyperFantasy">
           </a>
           <a href="./thinksoft/index.html">
-            <img src="./ts-logo-black.png" style="width: 58%;" alt="Image Content - Logo -  hyperspace">
+            <img src="./ts-logo-black.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
           </a>
           <a href="./lokajaya/index.html">
-            <img src="./lokajaya-logo-black.png" style="width: 58%;" alt="Image Content - Logo -  hyperspace">
+            <img src="./lokajaya-logo-black.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
           </a>
         </div>
       </div>
@@ -519,11 +519,11 @@
   </div>
 
   <footer id="footer">
-    <p>© 2021 Hyperspace. All rights reserved.</p>
+    <p>© 2021 HyperFantasy. All rights reserved.</p>
     <div class="social-media">
       <a href="https://www.instagram.com/mitayani.creative/"><span class="fa fa-instagram"></span></a>
       <a href="https://dribbble.com/lakoni"><span class="fa fa-dribbble"></span></a>
-      <a href="https://hyperspacecreative.web.app/"><span class="fa fa-snowflake-o"></span></a>
+      <a href="https://HyperFantasycreative.web.app/"><span class="fa fa-snowflake-o"></span></a>
     </div>
   </footer>
 
