--- a/public/index.html
+++ b/public/index.html
@@ -432,7 +432,7 @@
     <nav class="topnav" id="myTopnav">
       <div class="left">
         <a href="#" id="logo-site" class="active">
-          <img src="./HyperFantasy-black.png" alt="Image Content - Logo -  HyperFantasy">
+          <img src="./hyperspace-black.png" alt="Image Content - Logo -  HyperFantasy">
         </a>
       </div>
       <div class="right">
