--- a/public/index.html
+++ b/public/index.html
@@ -447,7 +447,7 @@
 
   <div class="container">
     <section id="opening">
-      <h1>We are HyperFantasy creative team</h1>
+      <h1>HyperFantasy</h1>
       <p>HyperFantasy is the best design studio around the world.
       </p>
     </section>
