--- a/public/index.html
+++ b/public/index.html
@@ -448,7 +448,7 @@
   <div class="container">
     <section id="opening">
       <h1>HyperFantasy</h1>
-      <p>HyperFantasy is the best design studio around the world.
+      <p>HyperFantasy is the best design studio.
       </p>
     </section>
     <section id="portfolio">
