wording: BIG TITLE

--- a/public/index.html
+++ b/public/index.html
@@ -447,9 +447,8 @@
 
   <div class="container">
     <section id="opening">
-      <h1>HyperFantasy</h1>
-      <p>HyperFantasy is the best design studio of the world.
-      </p>
+      <h1>We are HyperFantasy</h1>
+      <p>Creative Team that Love to Solve Problem Creatively</p>
     </section>
     <section id="portfolio">
       <div class="grid">
