--- a/public/index.html
+++ b/public/index.html
@@ -447,7 +447,7 @@
 
   <div class="container">
     <section id="opening">
-      <h1>Hallo, We are HyperFantasy</h1>
+      <h1>We are HyperFantasy</h1>
       <p>Creative Team that Love to Solve Problem Creatively</p>
     </section>
     <section id="portfolio">
