--- a/public/index.html
+++ b/public/index.html
@@ -448,7 +448,7 @@
   <div class="container">
     <section id="opening">
       <h1>We are HyperFantasy</h1>
-      <p>Creative Team that Love to Solve Problem Creatively</p>
+      <p>Creative Team that Love to Solve Problem Creatively.</p>
     </section>
     <section id="portfolio">
       <div class="grid">
