fix: asset links

--- a/public/index.html
+++ b/public/index.html
@@ -432,12 +432,12 @@
     <nav class="topnav" id="myTopnav">
       <div class="left">
         <a href="#" id="logo-site" class="active">
-          <img src="./hyperspace-black.png" alt="Image Content - Logo -  HyperFantasy">
+          <img src="./assets/styles/images/hyperspace-black.png" alt="Image Content - Logo -  HyperFantasy">
         </a>
       </div>
       <div class="right">
-        <a href="./about.html">ABOUT</a>
-        <a href="./contact.html">CONTACT</a>
+        <a href="./pages/about.html">ABOUT</a>
+        <a href="./pages/contact.html">CONTACT</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -488,30 +488,30 @@
       <div class="section-title">
         <h2>PARTNERS</h2>
         <div class="flex">
-          <a href="./mitayani/index.html">
-            <img src="./logo-mitayani-black.png" alt="Image Content - Logo -  HyperFantasy">
+          <a href="./group/mitayani/index.html">
+            <img src="./assets/styles/images/logo-mitayani-black.png" alt="Image Content - Logo -  HyperFantasy">
           </a>
-          <a href="./lakoni/index.html">
-            <img src="./lakoni.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
+          <a href="./group/lakoni/index.html">
+            <img src="./assets/styles/images/lakoni.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
           </a>
-          <a href="./aksarasa/index.html">
-            <img src="./aksarasa.png" alt="Image Content - Logo -  HyperFantasy">
+          <a href="./group/aksarasa/index.html">
+            <img src="./assets/styles/images/aksarasa.png" alt="Image Content - Logo -  HyperFantasy">
           </a>
           <a href="https://zopavo.web.app/">
-            <img src="./zopavo-center.png" alt="Image Content - Logo -  HyperFantasy">
+            <img src="./assets/styles/images/zopavo-center.png" alt="Image Content - Logo -  HyperFantasy">
           </a>
-          <a href="./thinksoft/index.html">
-            <img src="./ts-logo-black.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
+          <a href="./group/thinksoft/index.html">
+            <img src="./assets/styles/images/ts-logo-black.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
           </a>
-          <a href="./lokajaya/index.html">
-            <img src="./lokajaya-logo-black.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
+          <a href="./group/lokajaya/index.html">
+            <img src="./assets/styles/images/lokajaya-logo-black.png" style="width: 58%;" alt="Image Content - Logo -  HyperFantasy">
           </a>
         </div>
       </div>
     </section>
     <section id="action">
       <h3>Wanna work together?</h3>
-      <button onclick="location.href='./contact.html';"
+      <button onclick="location.href='./pages/contact.html';"
         style="margin:24px auto 0;border:none;color:#fff;background-image:linear-gradient(135deg,#8254e5,#83afe3 150%);height:50px;padding:16px 32px;font-family:Montserrat,sans-serif;font-weight:700;font-size:.688rem;line-height:18px;letter-spacing:1.54px;text-transform:uppercase;border-radius:25px;box-shadow:0 11px 36px 0 rgb(70 89 138 / 25%);">Contact
         us!</button>
     </section>
