--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -470,12 +470,12 @@
   <header id="header">
     <nav class="topnav" id="myTopnav">
       <div class="left">
-        <a href="./index.html" id="logo-site" class="active">
-          <img src="./hyperspace-black.png" alt="Image Content - Logo -  HyperFantasy">
+        <a href="../index.html" id="logo-site" class="active">
+          <img src="../assets/styles/images/hyperspace-black.png" alt="Image Content - Logo -  HyperFantasy">
         </a>
       </div>
       <div class="right">
-        <a href="./index.html">HOME</a>
+        <a href="../index.html">HOME</a>
         <a href="./contact.html">CONTACT</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
@@ -497,7 +497,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp1.jpg" alt="Image Content - Logo - HyperFantasy" />
+              <img src="./assets/styles/images/pp1.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Adin</span>
             <span class="team-position">UI/UX Designer</span>
@@ -506,7 +506,7 @@
           <div class="team-card">
 
             <div class="team-photo">
-              <img src="./pp2.jpg" alt="Image Content - Logo - HyperFantasy" />
+              <img src="./assets/styles/images/pp2.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Suaidi</span>
             <span class="team-position">Software Developer</span>
@@ -514,7 +514,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp3.jpg" alt="Image Content - Logo - HyperFantasy" />
+              <img src="./assets/styles/images/pp3.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Kong</span>
             <span class="team-position">Illustrator</span>
@@ -522,7 +522,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp4.jpg" alt="Image Content - Logo - HyperFantasy" />
+              <img src="./assets/styles/images/pp4.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Ayu</span>
             <span class="team-position">Graphic Designer</span>
@@ -530,7 +530,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp5.jpg" alt="Image Content - Logo - HyperFantasy" />
+              <img src="./assets/styles/images/pp5.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Rofi</span>
             <span class="team-position">Graphic Designer</span>
@@ -538,7 +538,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp6.jpg" alt="Image Content - Logo - HyperFantasy" />
+              <img src="./assets/styles/images/pp6.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Ali</span>
             <span class="team-position">Font Designer</span>
@@ -554,7 +554,7 @@
 
           <div class="team-card">
             <div class="team-photo">
-              <img src="./pp-c-1.jpg" alt="Image Content - Logo - HyperFantasy" />
+              <img src="./assets/styles/images/pp-c-1.jpg" alt="Image Content - Logo - HyperFantasy" />
             </div>
             <span class="team-name">Anna</span>
             <span class="team-position">Creative Business Consultant</span>
