--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -477,12 +477,12 @@
   <header id="header">
     <nav class="topnav" id="myTopnav">
       <div class="left">
-        <a href="./index.html" id="logo-site" class="active">
-          <img src="./hyperspace-black.png" alt="Image Content - Logo -  HyperFantasy">
+        <a href="../index.html" id="logo-site" class="active">
+          <img src="../assets/styles/images/hyperspace-black.png" alt="Image Content - Logo -  HyperFantasy">
         </a>
       </div>
       <div class="right">
-        <a href="./index.html">HOME</a>
+        <a href="../index.html">HOME</a>
         <a href="./about.html">ABOUT</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
@@ -682,9 +682,9 @@
                 text: "Your message has been successfully sent!",
                 type: "success"
                 // }, function() {
-                //     window.location = './index.html';
+                //     window.location = '../index.html';
               }).then(function () {
-                window.location = './index.html';
+                window.location = '../index.html';
               });
             }, 600);
             */
