--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       <a class="cta" href="mailto:hello.hyperfantasy@gmail.com">Send us an email!</a>
     </div>
     <div class="section section-flex">
-      <a class="icon-link" href="https://dribbble.com/heysaladin"><span class="icon" id="icon-dribbble"></span>hyperfantasy</a>
+      <a class="icon-link" href="https://dribbble.com/hyperfantasy"><span class="icon" id="icon-dribbble"></span>hyperfantasy</a>
       <a class="icon-link" href="https://www.instagram.com/hyperfantasy.creative"><span class="icon" id="icon-instagram"></span>hyperfantasy.creative</a>
     </div>
 
@@ -72,7 +72,7 @@
     }
     h1 {
       font-weight: Medium;
-      margin: 32px auto 8px;
+      margin: 32px auto 0px;
       font-size: 58px;
     }
     p {
