--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container">
-    <img src="./assets/styles/images/logo_mark_hyperfantasy.png" alt="Image Content - Logo -  HyperFantasy" />
+    <img id="main-logo" src="./assets/styles/images/logo_mark_hyperfantasy.png" alt="Image Content - Logo -  HyperFantasy" />
     <h1>
       We are building.
     </h1>
@@ -151,6 +151,9 @@
       }
       .section-flex {
         width: 100px;
+      }
+      #main-logo {
+        width: 150px;
       }
     }
     @media only screen and (max-width: 375px) {
