--- a/public/index-new.html
+++ b/public/index-new.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tailwind CSS Starter</title>
+  <title>Hyperfantasy</title>
   <link rel="stylesheet" href="dist/styles.css" />
   <script src="dist/script.js"></script>
 </head>
