--- a/public/index-new.html
+++ b/public/index-new.html
@@ -347,7 +347,7 @@
       </a>
     </div>
     <div class="text-white font-montserrat text-sm">
-      © 2021 STARTUP. All rights reserved
+      © 2022 Hyperfantasy. All rights reserved.
     </div>
   </section>
 </body>
