--- a/public/index-new.html
+++ b/public/index-new.html
@@ -66,8 +66,8 @@
         </span>
       </h1>
       <p class="font-pt-serif font-normal mb-7">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum
-        tempore consectetur voluptas, cumque nobis laboriosam voluptatem.
+        We are Hyperfantasy, creative team that love to solve problem
+        and building awesome digital products
       </p>
       <div class="font-montserrat">
         <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2">
