--- a/public/index-new.html
+++ b/public/index-new.html
@@ -71,7 +71,7 @@
       </p>
       <div class="font-montserrat">
         <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2">
-          Call to action
+          Let's talk!
         </button>
         <button class="px-6 py-4 border-2 border-black border-solid rounded-lg">
           Secondary action
