--- a/public/index-new.html
+++ b/public/index-new.html
@@ -67,7 +67,7 @@
       </h1>
       <p class="font-pt-serif font-normal mb-7">
         We are Hyperfantasy, creative team that love to solve problem
-        and building awesome digital products
+        and building awesome digital products.
       </p>
       <div class="font-montserrat">
         <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2">
