--- a/public/index-new.html
+++ b/public/index-new.html
@@ -73,9 +73,9 @@
         <button class="bg-black px-6 py-4 rounded-lg border-2 border-black border-solid text-white mr-2 mb-2">
           Let's talk!
         </button>
-        <button class="px-6 py-4 border-2 border-black border-solid rounded-lg">
+        <!-- <button class="px-6 py-4 border-2 border-black border-solid rounded-lg">
           Secondary action
-        </button>
+        </button> -->
       </div>
     </div>
     <div class="flex justify-around md:block mt-8 md:mt-0 md:flex-1">
