--- a/public/index-new.html
+++ b/public/index-new.html
@@ -13,7 +13,7 @@
   <!-- Navigation -->
   <nav class="fixed flex justify-between py-6 w-full lg:px-48 md:px-12 px-4 content-center bg-secondary z-10">
     <div class="flex items-center">
-      <img src='dist/assets/Logo_black.svg' alt="Logo" class="h-4" />
+      <img src='./assets/styles/images/logo_mark_hyperfantasy.png' alt="Logo" class="h-12" />
     </div>
     <ul class="font-montserrat items-center hidden md:flex">
       <li class="mx-3 ">
@@ -330,20 +330,20 @@
   <!-- Footer -->
   <section class="bg-black sectionSize">
     <div class="mb-4">
-      <img src='dist/assets/Logo_white.svg' alt="Logo" class="h-4" />
+      <img src='./assets/styles/images/logo_mark_hyperfantasy.png' alt="Logo" class="h-12" />
     </div>
     <div class="flex mb-8">
-      <a href="#">
+      <!-- <a href="#">
         <img src='dist/assets/logos/Facebook.svg' alt="Facebook logo" class="mx-4" />
       </a>
       <a href="#">
         <img src='dist/assets/logos/Youtube.svg' alt="Youtube logo" class="mx-4" />
       </a>
       <a href="#">
-        <img src='dist/assets/logos/Instagram.svg' alt="Instagram logo" class="mx-4" />
-      </a>
-      <a href="#">
         <img src='dist/assets/logos/Twitter.svg' alt="Twitter logo" class="mx-4" />
+      </a> -->
+      <a href="https://www.instagram.com/hyperfantasy.creative">
+        <img src='dist/assets/logos/Instagram.svg' alt="Instagram logo" class="mx-4" />
       </a>
     </div>
     <div class="text-white font-montserrat text-sm">
