--- a/public/index-new.html
+++ b/public/index-new.html
@@ -92,14 +92,15 @@
   <!-- How it works -->
   <section class="bg-black text-white sectionSize">
     <div>
-      <h2 class="secondaryTitle bg-underline2 bg-100%">How it works</h2>
+      <h2 class="secondaryTitle bg-underline2 bg-100%">What we do</h2>
     </div>
     <div class="flex flex-col md:flex-row">
+
       <div class="flex-1 mx-8 flex flex-col items-center my-4">
         <div class="border-2 rounded-full bg-secondary text-black h-12 w-12 flex justify-center items-center mb-3">
           1
         </div>
-        <h3 class="font-montserrat font-medium text-xl mb-2">Eat</h3>
+        <h3 class="font-montserrat font-medium text-xl mb-2">UI Design</h3>
         <p class="text-center font-montserrat">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit.
         </p>
@@ -108,7 +109,7 @@
         <div class="border-2 rounded-full bg-secondary text-black h-12 w-12 flex justify-center items-center mb-3">
           2
         </div>
-        <h3 class="font-montserrat font-medium text-xl mb-2">Sleep</h3>
+        <h3 class="font-montserrat font-medium text-xl mb-2">UX Design</h3>
         <p class="text-center font-montserrat">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit.
         </p>
@@ -122,6 +123,56 @@
           Lorem ipsum dolor, sit amet consectetur adipisicing elit.
         </p>
       </div>
+      <div class="flex-1 mx-8 flex flex-col items-center my-4">
+        <div class="border-2 rounded-full bg-secondary text-black h-12 w-12 flex justify-center items-center mb-3">
+          4
+        </div>
+        <h3 class="font-montserrat font-medium text-xl mb-2">Rave</h3>
+        <p class="text-center font-montserrat">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        </p>
+      </div>
+
+      </div>
+      <div class="flex flex-col md:flex-row">
+
+      <div class="flex-1 mx-8 flex flex-col items-center my-4">
+        <div class="border-2 rounded-full bg-secondary text-black h-12 w-12 flex justify-center items-center mb-3">
+          5
+        </div>
+        <h3 class="font-montserrat font-medium text-xl mb-2">Sleep</h3>
+        <p class="text-center font-montserrat">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        </p>
+      </div>
+      <div class="flex-1 mx-8 flex flex-col items-center my-4">
+        <div class="border-2 rounded-full bg-secondary text-black h-12 w-12 flex justify-center items-center mb-3">
+          6
+        </div>
+        <h3 class="font-montserrat font-medium text-xl mb-2">Rave</h3>
+        <p class="text-center font-montserrat">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        </p>
+      </div>
+      <div class="flex-1 mx-8 flex flex-col items-center my-4">
+        <div class="border-2 rounded-full bg-secondary text-black h-12 w-12 flex justify-center items-center mb-3">
+          7
+        </div>
+        <h3 class="font-montserrat font-medium text-xl mb-2">Rave</h3>
+        <p class="text-center font-montserrat">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        </p>
+      </div>
+      <div class="flex-1 mx-8 flex flex-col items-center my-4">
+        <div class="border-2 rounded-full bg-secondary text-black h-12 w-12 flex justify-center items-center mb-3">
+          8
+        </div>
+        <h3 class="font-montserrat font-medium text-xl mb-2">Rave</h3>
+        <p class="text-center font-montserrat">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        </p>
+      </div>
+
     </div>
   </section>
 
